# structtypes/request.go
@@ -56,3 +56,10 @@ type GetProjectlist struct {
 	Username string `json:"username" binding:"required"` //用户名
 	Tokens   string `json:"tokens" binding:"required"`   //用户token
 }
+
+//获取api列表
+type Getapilist struct {
+	Username    string `json:"username" binding:"required"`    //用户名
+	Tokens      string `json:"tokens" binding:"required"`      //用户token
+	Projectname string `json:"projectname" binding:"required"` //项目名
+}
